// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manifest vs output: 00 - manifest 1`] = `
Object {
  "background": Object {
    "service_worker": "background.js",
    "type": "module",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/declared-script.esm-wrapper-696b6e19.js",
      ],
      "matches": Array [
        "http://b.com/*",
        "https://a.com/*",
      ],
    },
  ],
  "description": "integration tests",
  "manifest_version": 3,
  "name": "Test",
  "permissions": Array [],
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "http://b.com/*",
        "https://a.com/*",
      ],
      "resources": Array [
        "declared-script.js",
        "main-world.js",
      ],
    },
    Object {
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
      "resources": Array [
        "dynamic-script.js",
      ],
    },
  ],
}
`;

exports[`manifest vs output: 01 - files from manifest 1`] = `
Object {
  "CSS": Array [],
  "HTML": Array [],
  "IMAGE": Array [],
  "JSON": Array [],
  "SCRIPT_BACKGROUND": Array [
    "background.js",
  ],
  "SCRIPT_DECLARED": Array [
    "assets/declared-script.esm-wrapper-696b6e19.js",
  ],
}
`;

exports[`manifest vs output: 02 - files from output 1`] = `
Array [
  "assets/declared-script.esm-wrapper-696b6e19.js",
  "assets/dynamic-script.esm-wrapper-744b534a.js",
  "assets/main-world.esm-wrapper-a8f2b1f3.js",
  "background.js",
  "declared-script.js",
  "dynamic-script.js",
  "main-world.js",
  "manifest.json",
]
`;

exports[`manifest vs output: 03 - manifest files match output 1`] = `
Object {
  "assets/declared-script.esm-wrapper-696b6e19.js": true,
  "background.js": true,
}
`;

exports[`manifest vs output: assets/declared-script.esm-wrapper-696b6e19.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"declared-script.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: assets/dynamic-script.esm-wrapper-744b534a.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"dynamic-script.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: assets/main-world.esm-wrapper-a8f2b1f3.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"main-world.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: background.js 1`] = `
"var scriptFileName = \\"dynamic-script.js\\";

console.log(\\"background.ts\\");
chrome.action.onClicked.addListener((tab) => {
  if (tab.id)
    chrome.scripting.executeScript({
      files: [scriptFileName],
      target: { tabId: tab.id }
    });
});
"
`;

exports[`manifest vs output: declared-script.js 1`] = `
"var fileName = \\"main-world.js\\";

console.log(\\"declared script\\");
const script = document.createElement(\\"script\\");
script.src = chrome.runtime.getURL(fileName);
document.head.prepend(script);
"
`;

exports[`manifest vs output: dynamic-script.js 1`] = `
"console.log(\\"dynamic script\\");
"
`;

exports[`manifest vs output: main-world.js 1`] = `
"console.log(\\"main world script\\");
"
`;
